# ctc-ai-ui

./: .gitignore  README.md  pyproject.toml
config/: config.ini
src/: main.py
src/controllers/: login_controller.py  model_controller.py
src/utils/: config.py  logger.py  model_manager.py
src/views/: loading_window.py  login_window.py  user_window.py
