[tool.poetry]
name = "pyqt-project"
version = "0.1.0"
description = "A modern PyQt5 desktop application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "5.15.11"
PyQt5-Qt5 = "5.15.2"
PyQt5-sip = "12.15.0"
colorama = "0.4.6"
packaging = "24.2"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pluggy = "1.5.0"
iniconfig = "2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
